--- a/patches/v0/config.toml
+++ b/patches/v0/config.toml
@@ -5,3 +5,4 @@ build-stage = 2
 [llvm]
 # Most users installing from source want to build all parts of the project from source, not just rustc itself.
 download-ci-llvm = false
+targets = "X86"
